force-app/main/default/objects/OrderItem/fields/AVA_SFCLOUD__Entity_Use_Code_Line__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__Entity_Use_Code_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Entity use codes indicate the reason for exemption</description>
    <inlineHelpText>Entity use codes indicate the reason for exemption</inlineHelpText>
    <label>Entity/Use Code</label>
    <referenceTo>AVA_MAPPER__Entity_Use_code__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>