force-app/main/default/objects/OrderItem/fields/AVA_SFCLOUD__Sales_Tax_Amount_Line__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__Sales_Tax_Amount_Line__c</fullName>
    <description>Displays the tax amount by AvaTax</description>
    <inlineHelpText>Displays the tax amount by AvaTax</inlineHelpText>
    <label>Sales Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>