force-app/main/default/objects/OrderItem/fields/AVA_SFCLOUD__Shipping_Country_Line__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__Shipping_Country_Line__c</fullName>
    <description>Enter the country of your order.</description>
    <inlineHelpText>Enter the country of your order.</inlineHelpText>
    <label>Shipping Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>