force-app/main/default/objects/OrderItem/fields/AVA_SFCLOUD__Shipping_Postal_Code_Line__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__Shipping_Postal_Code_Line__c</fullName>
    <description>Enter the zip/postal code of your order.</description>
    <inlineHelpText>Enter the zip/postal code of your order.</inlineHelpText>
    <label>Shipping Zip/Postal Code</label>
    <length>11</length>
    <type>Text</type>
</CustomField>