force-app/main/default/objects/OrderItem/fields/gcImageURL__c.field-meta.xml
<CustomField>
    <fullName>gcImageURL__c</fullName>
    <label>gcImageURL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>