force-app/main/default/objects/OrderItem/fields/Is_Special_Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Special_Order_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Special Order Product</label>
    <type>Checkbox</type>
</CustomField>