force-app/main/default/objects/OrderItem/fields/Last_Price_Paid__c.field-meta.xml
<CustomField>
    <fullName>Last_Price_Paid__c</fullName>
    <formula>PricebookEntry.Product2.Last_Price_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Price Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>