force-app/main/default/objects/OrderItem/fields/MerchantID__c.field-meta.xml
<CustomField>
    <fullName>MerchantID__c</fullName>
    <label>MerchantID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>