force-app/main/default/objects/OrderItem/fields/Opportunity_and_Order_Products_Linked__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_and_Order_Products_Linked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity and Order Products Linked</label>
    <type>Checkbox</type>
</CustomField>