force-app/main/default/objects/OrderItem/fields/Order_Account_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Order_Account_Email_Address__c</fullName>
    <formula>Order.Account.PersonContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Account Email Address</label>
    <type>Text</type>
</CustomField>