force-app/main/default/objects/OrderItem/fields/Order_Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Order_Shipping_City__c</fullName>
    <formula>Order.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Shipping City</label>
    <type>Text</type>
</CustomField>