force-app/main/default/objects/OrderItem/fields/Order_Shipping_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Order_Shipping_Country_Code__c</fullName>
    <formula>Order.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Shipping Country Code</label>
    <type>Text</type>
</CustomField>