force-app/main/default/objects/OrderItem/fields/Order_Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Order_Shipping_Method__c</fullName>
    <formula>TEXT( Order.Order_Shipping_Method__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Shipping Method</label>
    <type>Text</type>
</CustomField>