force-app/main/default/objects/OrderItem/fields/Order_Shipping_Phone_number__c.field-meta.xml
<CustomField>
    <fullName>Order_Shipping_Phone_number__c</fullName>
    <formula>Order.Account.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Shipping Phone number</label>
    <type>Text</type>
</CustomField>