force-app/main/default/objects/OrderItem/fields/Order_Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>Order_Shipping_Street__c</fullName>
    <formula>Order.ShippingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Shipping Street</label>
    <type>Text</type>
</CustomField>