force-app/main/default/objects/OrderItem/fields/Order_Shipping_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Order_Shipping_Zip_Postal_Code__c</fullName>
    <formula>Order.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Shipping Zip/Postal Code</label>
    <type>Text</type>
</CustomField>