force-app/main/default/objects/OrderItem/fields/Orders_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Orders_Account_Name__c</fullName>
    <formula>IF( Order.Account.IsPersonAccount == true, Order.Account.FirstName &amp;&quot; &quot;&amp;Order.Account.LastName,  Order.Account.Name  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Orders Account Name</label>
    <type>Text</type>
</CustomField>