force-app/main/default/objects/OrderItem/fields/ScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDate__c</fullName>
    <label>ScheduledDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>