force-app/main/default/objects/OrderItem/fields/Shipping_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Total_Amount__c</fullName>
    <formula>Order.ShippingTotalAmt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>